==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

Fixes
=====

 - Fix: Appereance of NPE during startup of crate

 - Fix: Log4j would yield a "No log4j2 configuration file found" error when 
   shutting down crate ungracefully (via kill signal)

 - Fix: Restoring empty partitioned tables wasn't possible